# Smart-oven-app-clone

./: CMakeLists.txt  Main.qml  MainView.qml  SetTimerView.qml  main.cpp
